Bug 1052940 - Make Maybe<T> only declare copy/move operations if T is copyable/movable. r=froydnj,jgilbert

Differential Revision: https://phabricator.services.mozilla.com/D68172