mfbt/tests/TestMaybe.cpp
@@ -139,10 +139,10 @@ struct UnmovableValue {
 
   Status GetStatus() { return mStatus; }
 
- private:
   UnmovableValue(UnmovableValue&& aOther) = delete;
   UnmovableValue& operator=(UnmovableValue&& aOther) = delete;
 
+ private:
   Status mStatus;
 };
 
@@ -300,12 +300,6 @@ static bool TestCopyAndMove() {
   MOZ_RELEASE_ASSERT(mayBasicValue3->GetStatus() == eWasMovedFrom);
 
   // Check that we always get copies for types that don't support moves.
-  // XXX(seth): These tests fail but probably shouldn't. For now we'll just
-  // consider using Maybe with types that allow copies but have deleted or
-  // private move constructors, or which do not support copy assignment, to
-  // be supported only to the extent that we need for existing code to work.
-  // These tests should work again when we fix bug 1052940.
-  /*
   Maybe<UnmovableValue> mayUnmovableValue = Some(UnmovableValue());
   MOZ_RELEASE_ASSERT(mayUnmovableValue->GetStatus() == eWasCopyConstructed);
   mayUnmovableValue = Some(UnmovableValue());
@@ -313,7 +307,12 @@ static bool TestCopyAndMove() {
   mayUnmovableValue.reset();
   mayUnmovableValue.emplace(UnmovableValue());
   MOZ_RELEASE_ASSERT(mayUnmovableValue->GetStatus() == eWasCopyConstructed);
-  */
+
+  static_assert(std::is_copy_constructible_v<Maybe<UnmovableValue>>);
+  static_assert(std::is_copy_assignable_v<Maybe<UnmovableValue>>);
+  // XXX Why do these static_asserts not hold?
+  // static_assert(!std::is_move_constructible_v<Maybe<UnmovableValue>>);
+  // static_assert(!std::is_move_assignable_v<Maybe<UnmovableValue>>);
 
   // Check that types that only support moves, but not copies, work.
   Maybe<UncopyableValue> mayUncopyableValue = Some(UncopyableValue());
@@ -323,6 +322,12 @@ static bool TestCopyAndMove() {
   mayUncopyableValue.reset();
   mayUncopyableValue.emplace(UncopyableValue());
   MOZ_RELEASE_ASSERT(mayUncopyableValue->GetStatus() == eWasMoveConstructed);
+  mayUncopyableValue = Nothing();
+
+  static_assert(!std::is_copy_constructible_v<Maybe<UncopyableValue>>);
+  static_assert(!std::is_copy_assignable_v<Maybe<UncopyableValue>>);
+  static_assert(std::is_move_constructible_v<Maybe<UncopyableValue>>);
+  static_assert(std::is_move_assignable_v<Maybe<UncopyableValue>>);
 
   // Check that types that support neither moves or copies work.
   Maybe<UncopyableUnmovableValue> mayUncopyableUnmovableValue;
@@ -333,6 +338,12 @@ static bool TestCopyAndMove() {
   mayUncopyableUnmovableValue.emplace(0);
   MOZ_RELEASE_ASSERT(mayUncopyableUnmovableValue->GetStatus() ==
                      eWasConstructed);
+  mayUncopyableUnmovableValue = Nothing();
+
+  static_assert(!std::is_copy_constructible_v<Maybe<UncopyableUnmovableValue>>);
+  static_assert(!std::is_copy_assignable_v<Maybe<UncopyableUnmovableValue>>);
+  static_assert(!std::is_move_constructible_v<Maybe<UncopyableUnmovableValue>>);
+  static_assert(!std::is_move_assignable_v<Maybe<UncopyableUnmovableValue>>);
 
   return true;
 }
